# NAT464-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Rust版本报告.md
fpga-nat64/: Cargo.toml  Makefile
fpga-nat64/src/: hal.rs  lib.rs
src/: checksum.rs  hal.rs  ip464.rs  lib.rs  nat.rs  test.rs
testdata/: arp.pcap  frag_v4.pcap  frag_v6.pcap  icmp_v4.pcap  icmp_v6.pcap  icmpv6.pcap  ipv4.pcap  tcp_v4.pcap  tcp_v6.pcap  testgen.py  udp_ans.pcap  udp_v4.pcap  udp_v6.pcap
