[package]
name = "fpga-nat64"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
nat464 = { path = ".." }
